--- a/implementations/package.json
+++ b/implementations/package.json
@@ -3,12 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "apexcharts": "^3.15.3",
+    "bootstrap": "^4.4.1",
+    "draft-js": "^0.11.4",
     "react": "^16.12.0",
+    "react-apexcharts": "^1.3.6",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-codemirror": "^1.0.0",
+    "react-codemirror2": "^6.0.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1"
+    "react-grid-layout": "^0.17.1",
+    "react-panelgroup": "^1.0.10",
+    "react-resize-layout": "^0.2.3",
+    "react-scripts": "3.3.1",
+    "react-vis": "^1.11.7",
+    "recharts": "^2.0.0-beta.1"
   },
   "scripts": {
     "start": "react-scripts start",
