--- a/implementations/package.json
+++ b/implementations/package.json
@@ -10,6 +10,7 @@
     "apexcharts": "^3.15.3",
     "bootstrap": "^4.4.1",
     "draft-js": "^0.11.4",
+    "json5": "^2.1.1",
     "react": "^16.12.0",
     "react-apexcharts": "^1.3.6",
     "react-bootstrap": "^1.0.0-beta.16",
