--- a/implementations/package.json
+++ b/implementations/package.json
@@ -10,6 +10,7 @@
     "apexcharts": "^3.15.3",
     "bootstrap": "^4.4.1",
     "draft-js": "^0.11.4",
+    "grommet": "^2.10.0",
     "json5": "^2.1.1",
     "react": "^16.12.0",
     "react-apexcharts": "^1.3.6",
@@ -22,7 +23,8 @@
     "react-resize-layout": "^0.2.3",
     "react-scripts": "3.3.1",
     "react-vis": "^1.11.7",
-    "recharts": "^2.0.0-beta.1"
+    "recharts": "^2.0.0-beta.1",
+    "styled-components": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
