--- a/implementations/package.json
+++ b/implementations/package.json
@@ -10,6 +10,7 @@
     "apexcharts": "^3.15.3",
     "bootstrap": "^4.4.1",
     "draft-js": "^0.11.4",
+    "flexbox-react": "^4.4.0",
     "grommet": "^2.10.0",
     "json5": "^2.1.1",
     "react": "^16.12.0",
